<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/skog"
    android:gravity="center"
    android:orientation="vertical"
    >


    <EditText
        android:id="@+id/enterEmailLoginMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textSize="30dp"
        android:maxLines="1"
        android:hint="@string/enter_email"
        android:fontFamily="monospace"
        />



    <EditText
        android:id="@+id/enterPasswordLoginMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="30dp"
        android:maxLines="1"
        android:hint="@string/enter_password"
        android:fontFamily="monospace"/>

    <Button
        android:id="@+id/loginButtonMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="monospace"/>

    <Button
        android:id="@+id/backToMainMenuFromLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main_menu"
        android:fontFamily="monospace"/>

</LinearLayout>